compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__using_private_unqualified_type_alias.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 91
expression: "import one.{X}\n\npub fn main() {\n  X\n}"
---
----- SOURCE CODE
-- one.rakun
type X = Int

-- main.rakun
import one.{X}

pub fn main() {
  X
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:1:13
  │
1 │ import one.{X}
  │             ^

The module `one` does not have a `X` value.

error: Unknown variable
  ┌─ /src/one/two.rakun:4:3
  │
4 │   X
  │   ^

The name `X` is not in scope here.
